Greg - minimum aesthethic change (thanks Kevin)

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
     font-size: large;
     margin-bottom: 7em;
     border-bottom: 2px solid darkgray;
+    background-color: hsla(120, 100%, 75%, 0.3);
 }
 
 #header-img {
@@ -62,6 +63,22 @@ body {
     margin-bottom: 6em;
 }
 
+#form {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  align-content: center;
+  justify-content: space-around;
+  margin-top: 3em;
+}
+
+#form > * {
+  border: 2px solid darkgray;
+  margin-bottom: 0.5em;
+  line-height: 1.6em;
+}
 
 
 @media screen and (max-widt: 600px) {
